examples/errors/parsing/iter.cn
fun countdown : Int -> Step(Int, ()) [impure] = {
  x -> Done () : Step(Int, ())
}

main : () [impure] =
  iter (x = 10) {
    countdown x
  }
